--- a/config.yml
+++ b/config.yml
@@ -17,6 +17,17 @@ config-sparse:
                     aiv: true
                     lord: true
                     startTroops: true
+              snake:
+                - name: UCP-AIC-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_UCP_AIC/
+                  control:
+                    aic: true
+                    lord: true
+                    startTroops: true
+                - name: Fixed-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_VanillaFixed/
+                  control:
+                    aiv: true
               pig:
                 - name: Vardenow
                   root: ucp/plugins/Die-neuen-Herrscher-KI-Files/resources/ai/Vardenow/
@@ -29,6 +40,28 @@ config-sparse:
                     aiv: true
                     lord: true
                     startTroops: true
+              wolf:
+                - name: UCP-AIC-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_UCP_AIC/
+                  control:
+                    aic: true
+                    lord: true
+                    startTroops: true
+                - name: Fixed-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_VanillaFixed/
+                  control:
+                    aiv: true
+              saladin:
+                - name: UCP-AIC-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_UCP_AIC/
+                  control:
+                    aic: true
+                    lord: true
+                    startTroops: true
+                - name: Fixed-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_VanillaFixed/
+                  control:
+                    aiv: true
               caliph:
                 - name: Mahdi
                   root: ucp/plugins/Die-neuen-Herrscher-KI-Files/resources/ai/Mahdi/
@@ -53,6 +86,17 @@ config-sparse:
                     aiv: true
                     lord: true
                     startTroops: true
+              richard:
+                - name: UCP-AIC-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_UCP_AIC/
+                  control:
+                    aic: true
+                    lord: true
+                    startTroops: true
+                - name: Fixed-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_VanillaFixed/
+                  control:
+                    aiv: true
               frederick:
                 - name: HandOfBlood
                   root: ucp/plugins/Die-neuen-Herrscher-KI-Files/resources/ai/HandOfBlood/
@@ -741,13 +785,347 @@ config-sparse:
                   name: Hackerman
                   root: ucp/plugins/Die-neuen-Herrscher-KI-Files/resources/ai/Hackerman/
                   active: true
-    files:
+          snake:
+            aic:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_UCP_AIC/
+                  active: true
+            aiv:
+              contents:
+                suggested-value:
+                  name: Fixed-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_VanillaFixed/
+                  active: true
+            lord:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_UCP_AIC/
+                  active: true
+            startTroops:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Snake
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/snake_UCP_AIC/
+                  active: true
+          wolf:
+            aic:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_UCP_AIC/
+                  active: true
+            aiv:
+              contents:
+                suggested-value:
+                  name: Fixed-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_VanillaFixed/
+                  active: true
+            lord:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_UCP_AIC/
+                  active: true
+            startTroops:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Wolf
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/wolf_UCP_AIC/
+                  active: true
+          saladin:
+            aic:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_UCP_AIC/
+                  active: true
+            aiv:
+              contents:
+                suggested-value:
+                  name: Fixed-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_VanillaFixed/
+                  active: true
+            lord:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_UCP_AIC/
+                  active: true
+            startTroops:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Saladin
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/saladin_UCP_AIC/
+                  active: true
+          richard:
+            aic:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_UCP_AIC/
+                  active: true
+            aiv:
+              contents:
+                suggested-value:
+                  name: Fixed-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_VanillaFixed/
+                  active: true
+            lord:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_UCP_AIC/
+                  active: true
+            startTroops:
+              contents:
+                suggested-value:
+                  name: UCP-AIC-Richard
+                  root: ucp/plugins/ucp2-ai-files/resources/ai/richard_UCP_AIC/
+                  active: true
+    ucp2-legacy:
+      config:
+        fix_apple_orchard_build_size:
+          enabled:
+            contents:
+              suggested-value: true
+        o_freetrader:
+          enabled:
+            contents:
+              suggested-value: true
+        o_healer:
+          enabled:
+            contents:
+              suggested-value: true
+        o_responsivegates:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_access:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_assaultswitch:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_buywood:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_defense:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_fix_crusader_archers_pitch:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_fix_laddermen_with_enclosed_keep:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_nosleep:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_rebuild:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_tethers:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_towerengines:
+          enabled:
+            contents:
+              suggested-value: true
+        ai_housing:
+          build_housing:
+            contents:
+              suggested-value:
+                enabled: true
+                sliderValue: 5
+          campfire_housing:
+            contents:
+              suggested-value:
+                enabled: true
+                sliderValue: 8
+          delete_housing:
+            enabled:
+              contents:
+                suggested-value: true
+        ai_resources_rebuy:
+          flour:
+            contents:
+              suggested-value:
+                enabled: true
+                sliderValue: 36
+          iron:
+            contents:
+              suggested-value:
+                enabled: true
+                sliderValue: 36
+          wood:
+            contents:
+              suggested-value:
+                enabled: true
+                sliderValue: 36
+        ai_demolish:
+          ai_demolish_walls:
+            enabled:
+              contents:
+                suggested-value: true
+          ai_demolish_trapped:
+            enabled:
+              contents:
+                suggested-value: true
+          ai_demolish_eco:
+            enabled:
+              contents:
+                suggested-value: true
+        ai_addattack:
+          contents:
+            suggested-value:
+              enabled: true
+              choice: relative
+              choices:
+                absolute:
+                  slider: 5
+                relative:
+                  slider: 0.6
+        ai_attacklimit:
+          contents:
+            suggested-value:
+              enabled: true
+              sliderValue: 3000
+        ai_attackwave:
+          contents:
+            suggested-value:
+              enabled: true
+              sliderValue: 7
+        ai_recruitstate_initialtimer:
+          contents:
+            suggested-value:
+              enabled: true
+              sliderValue: 0
+        u_arabwall:
+          enabled:
+            contents:
+              suggested-value: true
+        u_arabxbow:
+          enabled:
+            contents:
+              suggested-value: true
+        u_laddermen:
+          enabled:
+            contents:
+              suggested-value: true
+        u_spearmen:
+          enabled:
+            contents:
+              suggested-value: true
+        u_spearmen_run:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_map_sending:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_rapid_deletion_bug:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_baker_disappear:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_fletcher_bug:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_ladderclimb:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fix_moat_digging_unit_disappearing:
+          enabled:
+            contents:
+              suggested-value: true
+        o_restore_arabian_engineer_speech:
+          enabled:
+            contents:
+              suggested-value: true
+        u_fireballistafix:
+          enabled:
+            contents:
+              suggested-value: true
+        u_fix_applefarm_blocking:
+          enabled:
+            contents:
+              suggested-value: true
+        u_fix_lord_animation_stuck_movement:
+          enabled:
+            contents:
+              suggested-value: true
+        u_tanner_fix:
+          enabled:
+            contents:
+              suggested-value: true
+        o_increase_path_update_tick_rate:
+          enabled:
+            contents:
+              suggested-value: true
+        o_override_identity_menu:
+          enabled:
+            contents:
+              suggested-value: true
+        o_xtreme:
+          enabled:
+            contents:
+              suggested-value: true
+        o_armory_marketplace_weapon_order_fix:
+          enabled:
+            contents:
+              suggested-value: true
+        o_fast_placing:
+          enabled:
+            contents:
+              suggested-value: true
+        o_default_multiplayer_speed:
+          contents:
+            suggested-value:
+              enabled: true
+              sliderValue: 50
+        o_engineertent:
+          enabled:
+            contents:
+              suggested-value: true
+        o_gamespeed:
+          enabled:
+            contents:
+              suggested-value: true
+        o_keys:
+          enabled:
+            contents:
+              suggested-value: true
+        o_moatvisibility:
+          enabled:
+            contents:
+              suggested-value: true
+    graphicsApiReplacer:
       config: {}
     aicloader:
       config: {}
-    graphicsApiReplacer:
+    files:
       config: {}
   plugins:
+    ucp2-ai-files:
+      config: {}
     Die-neuen-Herrscher-KI-Files:
       config: {}
 meta:
