--- a/definition.yml
+++ b/definition.yml
@@ -2,10 +2,12 @@ name: Die-neuen-Herrscher
 author: Hacksuelze
 version: 1.0.0
 dependencies:
-  Die-neuen-Herrscher: ^1.0.0
+  Die-neuen-Herrscher-KI-Files: ^1.0.0
   aiSwapper: ^1.1.0
   files: ^1.1.0
-  aicloader: ^1.1.0
+  aicloader: ^1.1.1
   graphicsApiReplacer: ^1.2.0
-  framework: ">=3.0.4"
-  frontend: ">=1.0.5"
+  ucp2-ai-files: ^2.15.1
+  ucp2-legacy: ^2.15.1
+type: plugin
+display-name: Die-neuen-Herrscher
